@@ -3,6 +3,7 @@
 
 class JetProxy;
 class MuonProxy;
+class TauProxy;
 class NTVars;
 class NTReclusteringVars;
 class NTExtraVars;
@@ -97,7 +98,10 @@ class PhysObjProxyUtils
 		  const std::vector<float>& jetSmearSystW,
 		  const std::vector<float>* flaggedtau = NULL, 
 		  float tauMt = 0.f, float SherpaBugMET = 0.f,
-		  float metLHTOPOx =0.f, float metLHTOPOy = 0.f, bool istruth = false);
+		  float metLHTOPOx =0.f, float metLHTOPOy = 0.f, 
+		  bool istruth = false,
+		  std::vector<TauProxy> baseline_taus = std::vector<TauProxy>(),
+		  std::vector<TauProxy> signal_taus   = std::vector<TauProxy>());
 
   void FillNTReclusteringVars(NTReclusteringVars& RTntv, 
 		  const std::vector<JetProxy>& good_jets);
